chore: swagger for easy api doc parsing, buf formatting
